feat: 仓库导入支持登录页截图预览
